--- a/pipelines/template_covid.yaml
+++ b/pipelines/template_covid.yaml
@@ -79,7 +79,7 @@ jobs:
         echo "COUNTER_FILE=.counter" >> .env
       displayName: 'Prepare Synthea to OMOP for country'
     - script: |
-        cd ${AGENT_BUILDDIRECTORY}/s/SyntheticFinland
+        cd ${AGENT_BUILDDIRECTORY}/s/covid19
         python ./run.py ${AGENT_BUILDDIRECTORY} $COUNTRY
       displayName: 'Run Synthea, Synthea->OMOP 6 for country'
     - script: |
