--- a/pipelines/template_covid.yaml
+++ b/pipelines/template_covid.yaml
@@ -47,7 +47,9 @@ jobs:
         # checkout the covid19 branch
         git checkout covid19
         # temp file some values in synthea.properties
+        ls -la ${AGENT_BUILDDIRECTORY}/s/synthea/src/main/resources/synthea.properties
         sed -i 's/exporter.csv.export = false/exporter.csv.export = true/g' ${AGENT_BUILDDIRECTORY}/s/synthea/src/main/resources/synthea.properties
+        ls -la ${AGENT_BUILDDIRECTORY}/s/synthea/src/main/resources/synthea.properties
         ./gradlew build -x test
       displayName: 'Build Synthea for country'
     - script: |
