dont export fhir

--- a/pipelines/template_covid.yaml
+++ b/pipelines/template_covid.yaml
@@ -48,6 +48,7 @@ jobs:
         git checkout covid19
         # temp file some values in synthea.properties
         sed -i 's/exporter.csv.export = false/exporter.csv.export = true/g' ${AGENT_BUILDDIRECTORY}/s/synthea/src/main/resources/synthea.properties
+        sed -i 's/exporter.fhir.export = true/exporter.fhir.export = false/g' ${AGENT_BUILDDIRECTORY}/s/synthea/src/main/resources/synthea.properties
         ./gradlew build -x test
       displayName: 'Build Synthea for country'
     - script: |
